--- a/2nd-Assignment/Info.plist
+++ b/2nd-Assignment/Info.plist
@@ -6,6 +6,7 @@
 	<array>
 		<string>Prentendard-Regular.otf</string>
 		<string>Pretendard-SemiBold.otf</string>
+		<string>Pretendard-Bold.otf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
